...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_title_scheduled_walks"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_team_activity_see_teammate_routes"
        app:layout_constraintBottom_toTopOf="@id/list_members_in_team" />

    <TextView
        android:id="@+id/title_teammates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_teammates_in_team"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/text_no_teammates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_no_teammates_in_team"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/title_teammates"
...
