...
    <string name="feet_units">ft</string>
    <string name="inch_units">in</string>
    <string name="without_login">Continue without login</string>
    <string name="with_login">Go back to login</string>
    <string name="enter_gmail_address">Enter gmail address</string>
    <string name="enter_password">Enter unique password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up_tv">Don\'t have an account? Sign up here</string>
    <string name="login_tv">Already have an account? Log in here</string>

    <!--    In activity_home.xml-->
    <string name="daily_steps">Daily Steps</string>
...
    <string name="title_activity_routes">My Routes</string>
    <string name="title_activity_invite_team_to_walk">Invite Team to Walk</string>

    <!--    Others-->
    <string name="routes">Routes</string>
    <string name="home">Home</string>
    <string name="team">Team</string>

    <!-- In ListviewAdapter.java -->
    <string name="fake_teammate_name">Samuel Jackson</string>
    <string name="fake_teammate_initials">SJ</string>

    <!-- In TeamRoutesActivity -->
...
