<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/action_routes_list"
        android:enabled="true"
        android:icon="@drawable/ic_terrain_black_24dp"
        android:title="@string/routes" />
    <item
        android:id="@+id/action_team"
        android:enabled="true"
        android:icon="@drawable/ic_team_black_24dp"
        android:title="@string/team" />


</menu>